@@ -1,3 +1,4 @@
+2/22/12 use toggle button on light
 2/22/12 make the light 40% taller, so we can increase the lens diameter
 # 0.00.11 (61522) Feb 21, 2012
 2/21/12 dev version for discussion of design issues with JC
